src/test/compile-fail/writing-to-immutable-obj.rs
// error-pattern: writing to immutable type
obj objy(int x) {
    fn foo() -> () {
        x = 5;
    }
}
fn main() {
}
